--- a/Part-3/notes_backend/package.json
+++ b/Part-3/notes_backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build:ui": "rm -rf build && cd ../../../../Part-2/notes_frontend && npm run build && cp -r build ../../../Part-3/notes_backend",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "Farhan Khan",
   "license": "MIT",
