--- a/Part-4/blog_backend/package.json
+++ b/Part-4/blog_backend/package.json
@@ -8,10 +8,14 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "dev": "nodemon index.js"
   },
   "devDependencies": {
     "jest": "^29.5.0"
+  },
+
+  "jest":{
+    "testEnvironment": "node"
   }
 }
